# OpenCVPipeline

./: CMakeLists.txt  LICENSE  README.md  smiledetect.cpp  smiledetect_tbb.cpp
